# ppi_with_logging

./: .gitignore  README.md  database.ipynb  pyproject.toml
docs/source/: api.md  conf.py  index.md  modules.md
docs/source/notebooks/: ppi.ipynb  test_ppi.ipynb
notebook/: ppi.ipynb  week6.ipynb
notebooks/: ppi.ipynb  test_ppi.ipynb
src/ppi/: cli.py  database.py  intact_analyzer.py
tests/: test_database.py
