[project]
name = "ppi"
version = "0.1.0"
description = ""
authors = [
    {name = "Phuong Thanh Nguyen", email = "s43pnguy@uni-bonn.de"},
]
dependencies = [
    "pandas>=2.1.3",
    "sqlalchemy>=2.0.23",
    "click>=8.1.7",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.3",
]

[project.scripts]
ppi = "ppi.cli:main"

